# code-stingray

./: .bumpversion.cfg  Dockerfile  README.md  pylintrc  pyproject.toml  requirements.txt
.github/workflows/: release.yml
code_stingray/: cli.py  code_stingray.py
code_stingray/evaluation/: repetition_evaluator.py
code_stingray/git_platform/: commenter.py  commenter_factory.py  github.py
code_stingray/llms/: google.py  google_ai.py  google_cloud.py  llm.py  llm_factory.py  openai.py
code_stingray/utils/: args.py  file_reader.py  git.py  logging.py  prompt.py
config/: prompt.yaml
config/cicd/: cloudbuild.yaml
tests/evaluation/: test_repetition_evaluator.py
tests/evaluation/test_repetition_evaluator/: prediction_expected.md  prediction_repeated.md  reference.diff
